@@ -4,6 +4,7 @@
 -build: switch to Dist::Zilla
 -bugfix: set utf8 flag in compound iri accessors
 -bugfix: increase some member sizes to allow room for utf8 sequences
+-optimization: use memcpy instead of strncpy in some cases
 
 0.35 2018-06-28
 -behavior: all query scanning functions now treat '&' and ';' as valid separators
